# video-generation-arxiv-site

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cli.py  config.py  main.py
app/arxiv/: client.py  filtering.py  models.py  ranking_source.py
app/pipeline/: openai_summarizer.py  pdf_parser.py  publisher.py  schemas.py  summarizer.py
app/storage/: content_store.py
app/templates/: archive.html  base.html  index.html  login.html  paper.html
app/web/: auth.py  routes.py
docs/operations/: local-run.md
docs/superpowers/specs/: 2026-05-10-video-generation-arxiv-site-design.md
scripts/: run_daily.py  run_daily_task.cmd
tests/: test_config.py
tests/arxiv/: test_client.py  test_filtering.py  test_ranking_source.py
tests/cli/: test_run_daily.py
tests/pipeline/: test_openai_summarizer.py  test_pdf_parser.py  test_publisher.py  test_summarizer.py
tests/web/: test_pages.py
