[project]
name = "video-generation-arxiv-site"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "pymupdf>=1.24.10",
  "uvicorn>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
